# prebuilt-mpr

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  config.toml  copyright  frpc@.service  frps@.service  gcc-armv7-fix.patch  hx  justfile  packages.toml  postinst.sh  renovate.json
.github/workflows/: build-pkg.yml  build.yml  check-issue.yml  check-pkg.yml  publish-pkg.yml  run-checks.yml  test.yml  trigger-checks.yml  update-pkg.yml
.github/workflows/get-update-targets/: action.yml
pkg/: PKGBUILD
src/: cache.rs  check_pkg.rs  main.rs  pkglist.rs  run_checks.rs  upload_debs.rs  util.rs
src/actions/: publish-pkg.yml  update-pkg.yml
