[package]
name = "pbmpr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env"] }
dotenvy = "0.15.7"
exitcode = "1.1.2"
flate2 = "1.0.26"
hw-msg = { version = "0.4.0", features = ["logging"] }
log = "0.4.17"
octocrab = "0.22.0"
once_cell = "1.17.1"
reqwest = "0.11.18"
rust-apt = "0.5.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
