[package]
name = "pbmpr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive", "env"] }
dotenvy = "0.15.7"
exitcode = "1.1.2"
flate2 = "1.0.26"
git2 = "0.17.2"
hw-msg = { version = "0.4.1", features = ["logging"] }
log = "0.4.19"
octocrab = { git = "https://github.com/hwittenborn/octocrab" }
once_cell = "1.18.0"
proget = "0.2.4"
regex = "1.9.1"
reqwest = "0.11.18"
rust-apt = "0.5.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
walkdir = "2.3.3"
zip = "0.6.6"
